[workspace]
resolver = "3"
members = ["image-decoder", "lib", "save-tool"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
lz-str = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25.6", features = ["png"] }
